Fix formatting of header, footer, & media Correct flex styling to fix spacing Add formatting to text and backgrounds

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     height: 100vh;
-    margin: 0 33%;
+    margin: 0 20%;
     overflow: hidden;
     font-family: Roboto, sans-serif;
     display: flex;
@@ -13,10 +13,20 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10%;
-    width: 100%;
+    padding: 16px;
+}
+
+.header, 
+.media {
+    font-size: 18px;
+    color: #E5E7EB;
     background-color: #1F2937;
-    color: white;
+    padding: 0 10%;
+}
+
+.logo {
+    font-size: 24px;
+
 }
 
 ul {
@@ -31,26 +41,58 @@ img{
     min-width: 0;
     width: 100%;
     height: auto;
+    padding: 0;
+    margin: 0;
 }
 
 .media {
     display: flex;
+    margin: 0;
     flex: 1;
     justify-content: center;
     align-items: center;
 }
 
 .media .text {
-    flex: 1;
+    flex: 1 1 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
+
+.hero {
+    text-align: left;
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FAF8;
+    margin: 0;
+    padding: 0;
+}
+
 
 .media .image {
     display: flex;
-    flex: 1;
-    min-width: auto;
+    flex: 1 1 50%;
+    min-width: 200px;
+    margin: 0;
+}
+
+button {
+    background-color: #3882F6;
 }
 
 .footer {
+    margin: 0;
+    width: 100%;
     display: flex;
     justify-content: center;
+    font-size: 18px;
+    background-color: #1F2937;
+    color: #F9FAF8; 
+}
+
+.footer div {
+    flex: auto;
+    text-align: center;
 }
